--- a/class/html-starter-pack/index.html
+++ b/class/html-starter-pack/index.html
@@ -53,7 +53,7 @@
             <li>night</li>
         </ol>
         <figure>
-            <img src="images/newt-mosaic4.png"/>
+            <img src="(https://s7d1.scene7.com/is/image/mcdonalds/DC_202006_0001_Hamburger_Alt_832x472:1-3-product-tile-desktop?wid=765&hei=472&dpr=off)"/>
             <figcaption>a stylized image of a firebelly newt that Dr. B made as a web logo on <a href="https://newtfire.org">newtfire.org</a></figcaption>
         </figure> 
     </body>
